--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -10,7 +10,7 @@ server {
   location /api/v1/public/ {
     resolver 127.0.0.11 valid=30s;
     set $upstream geobroker;
-    proxy_pass http://$upstream:8080/geobroker/api/v1/public/;
+    proxy_pass http://$upstream:8080/geobroker$request_uri;
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "Upgrade";
