Further restrict referrer sending

--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -3,6 +3,9 @@ server {
 
   root /app;
 
+  # We never want a referrer sent on requests, use all available options to enforce it
+  add_header Referrer-Policy no-referrer;
+
   location / {
       index index.html;
   }
