--- a/.github/workflows/release-geoclient.yml
+++ b/.github/workflows/release-geoclient.yml
@@ -40,6 +40,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           tag_name: v${{ steps.version.outputs.version }}
+          target_commitish: ${{ github.ref }}
           draft: false
           body_path: client/CHANGELOG.md
           files: |
