--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/leaflet": "^1.9.3",
+    "@types/leaflet.markercluster": "^1.5.1",
     "@types/node": "^20.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
@@ -29,6 +30,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
     "leaflet": "^1.9.3",
-    "leaflet-easybutton": "^2.4.0"
+    "leaflet-easybutton": "^2.4.0",
+    "leaflet.markercluster": "^1.5.3"
   }
 }
