--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "geoclient",
-  "version": "2.0.1-SNAPSHOT",
+  "version": "2.0.1",
   "description": "This is the frontend for geo data from Geobroker",
   "main": "index.js",
   "scripts": {
