--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,21 +1,19 @@
 version: '3.7'
+name: geoclient
 
 services:
-  geoclient:
+  webserver:
     image: wrkfmdit/geoclient:${GEOCLIENT_TAG:-latest}
-    build:
-      context: .
     volumes:
       - type: bind
         source: ${MLS_GEOCLIENT_CONFIG:-./config}
         target: /app/config/
         read_only: true
-
     ports:
       - "8070:80"
+
   geobroker:
-    # This needs to be prebuilt for now
-    image: geobroker-app
+    image: wrkfmdit/geobroker:${GEOBROKER_TAG:-latest}
     ports:
       - "8071:8080"
 
