fix default config and map layers

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,19 +5,19 @@ WORKDIR /app
 
 # Add only configuration and run npm install to download dependencies
 # This causes Docker to use the cached dependencies instead of downloading them every time
-COPY ../client/package.json ../client/package-lock.json ../client/tsconfig.json ../client/webpack.config.js ./
+COPY ./package.json ./package-lock.json ./tsconfig.json ./webpack.config.js ./
 RUN npm install
 
 # Copy the sourcecode and build it
-COPY ../client/src ./src/
-COPY ../client/LICENSE ./LICENSE
+COPY src ./src/
+COPY ./LICENSE ./LICENSE
 RUN npm run build
 
 # Second stage: Configure nginx
 FROM nginx:alpine AS runtime
 
-COPY ../client/LICENSE /app/
+COPY ./LICENSE /app/
 COPY --from=build /app/dist/ /app/
 RUN chmod 644 /app/assets/*
 
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY ./resources/nginx.conf /etc/nginx/conf.d/default.conf
